feat : non social user can change account password
+ auth/pwdchange.js -> change non social account password
* active.js
* auth/pwdreset/pwdreset.js -> code refactor
* swagger.yaml -> change password input format to "password"
